# MaskOperations

./: AddConstantInHole.cpp  AddNoiseInMaskedRegion.cpp  ApplyMaskToImage.cpp  ApplyMaskToImageFloat.cpp  ApplyMaskToImageRGB.cpp  AveragePixelsInHole.cpp  BlurInHole.cpp  CMakeLists.txt  Color.h  CountBoundaryPixels.cpp  CreateMaskFromImage.cpp  ExtractBoundary.cpp  Helpers.cpp  Helpers.h  Helpers.hxx  HoleInformation.cpp  ITKHelpers.cpp  ITKHelpers.h  ITKHelpers.hxx  InterpolateThroughHole.cpp  Mask.cpp  Mask.h  Mask.hxx  MaskOperations.cpp  MaskOperations.h  MaskOperations.hxx  MedianFilterInHole.cpp  OutputHelpers.cpp  OutputHelpers.h  OutputHelpers.hxx  README.txt  SetMaskedPixelsToValue.cpp  TestAddNoiseInHole.cpp  TestInterpolateThroughHole.cpp  WriteMaskedPixelValues.cpp
Data/: BlackWhiteInterpolationPoints.txt
